scrollbar and some other css bugs

--- a/client/src/components/modules/dreams/DreamContainer.css
+++ b/client/src/components/modules/dreams/DreamContainer.css
@@ -46,7 +46,7 @@
   float: top;
   padding-top: 8vh;
   padding-bottom: 4vh;
-  width: 60vw;
+  width: 58vw;
   background-color: #ffd5cf;
 }
 
