--- a/client/src/components/modules/friendsystem/OutgoingRequestBox.css
+++ b/client/src/components/modules/friendsystem/OutgoingRequestBox.css
@@ -1,8 +1,8 @@
 .outgoingRequestsBox {
   position: relative;
-  width: 30vw;
+  width: 28vw;
   text-decoration: none !important;
-  overflow-x: auto;
+  overflow-x: hidden;
   height: 5vh;
 }
 
@@ -25,7 +25,7 @@
   background-color: transparent;
   color: white;
   cursor: pointer;
-  left: 75%;
+  left: 78%;
   padding-top: 0.5vh;
 }
 .cancelRequest:hover {
